--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "vite_react_shadcn_ts",
-  "private": true,
+  "name": "portfolio",
+  "homepage": "https://Shivesh4.github.io/Portfolio",
   "version": "0.0.0",
   "type": "module",
+
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
